--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,25 @@
     <string name="app_name">Kotlin_chat</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="email_address">Email</string>
+    <string name="password">Password</string>
+    <string name="login">Log in</string>
+    <string name="username">Username</string>
+    <string name="register">Sign up</string>
+    <string name="title_activity_home">Home Activity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="chat_rooms">Chats</string>
+    <string name="my_friends">My Friends</string>
+    <string name="add_friends">Add Friends</string>
+    <string name="profile">My Profile</string>
+    <string name="Settings">Settings</string>
+    <string name="log_out">Log out</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="email_address">البريد الإلكتروني</string>
-    <string name="password">كلمة المرور</string>
-    <string name="login">دخول</string>
-    <string name="username">إسم المستخدم</string>
-    <string name="register">تسجيل</string>
 </resources>
